<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdminLoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutUserName"
            style="@style/customTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_UserName"
                style="@style/EditTextForm"
                android:inputType="textCapWords"
                android:hint="@string/hint_user_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutPassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            style="@style/customTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                style="@style/EditTextForm"
                android:hint="@string/hint_password"
                android:capitalize="words"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login_admin"
            style="@style/customButtom"
            android:text="@string/btn_login" />


    </LinearLayout>


    <include
        layout="@layout/layout_footer"/>


</RelativeLayout>